[package]
name = "self_healing_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "memory_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.29"
