[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "memory_core"
version = "0.1.0"
description = "Self-healing memory system"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: Microsoft :: Windows",
]

[tool.maturin]
features = ["pyo3/extension-module"]